2003-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.h (Array<T>::resize (int, const T&)): Reinstate.
	* MArray.h (resize): Delete.
	* MArray2.h (resize): Delete.
	* DASRT.cc (DASRT::integrate): Use resize, not resize_and_fill.
	* ODESSA (ODESSA::integrate): Likewise.

2003-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (dist): Depend on stamp-prereq.

2003-11-12  John Eaton  <jwe@bevo.che.wisc.edu>

	* mach-info.c (oct_mach_info::init_float_format) [CRAY]:
	Kluge to make it work.

	* lo-ieee.cc (octave_ieee_init): Set octave_Inf, octave_NaN, and
	octave_NA to DBL_MAX if native float format is vaxd, vaxg, or cray.

	* cmd-edit.cc (gnu_readline::do_generate_filename_completions,
	default_command_editor::do_generate_filename_completions,
	command_editor::generate_filename_completions): New functions.
	* cmd-edit.h: Provide decls.
	* oct-rl-edit.c (octave_rl_filename_completion_function): New
	function.
	* oct-rl-edit.h: Provide decl.

2003-11-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.h (INSTANTIATE_ARRAY_ASSIGN, INSTANTIATE_ARRAY_AND_ASSIGN,
	INSTANTIATE_ARRAY): New macros.
	* Array-C.cc, Array-b.cc, Array-ch.cc, Array-d.cc, Array-i.cc,
	Array-idx-vec.cc, Array-s.cc, Array-str.cc, ODESSA.cc: Use them.

	* Array.h (Array<T>::ipermute): New function.

2003-11-11  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::permute): New function.
	* Array.h: Provide decl.

	* Array-util.cc (calc_permutated_idx): New function.
	* Array-util.h: Provide decl.

2003-11-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::index2): Return value has orientation of
	indexed value if indexing a vector with a bool matrix.

	* ArrayN.h (ArrayN<T>::get_size): Delete.

	* Array.cc, ArrayN.cc, dNDArray.cc, CNDArray.cc, boolNDArray.cc,
	chNDArray.cc: Include Array-util.h instead of ArrayN-inline.h.

	* ArrayN-inline.h: Delete.
	* Array-util.h, Array-util.cc: New files, from ArrayN-inline.h.
	* Makefile.in: Fix the appropriate lists.
