@@ -1,3 +1,7 @@
+2003-11-18  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* general/issymmetric.m: Don't fail if norm (x) == 0.
+
 2003-11-17  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* miscellaneous/path.m: Fix thinko in previous change.
